# p4nimau-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: answers.rs  bot.rs  config.rs  lib.rs  main.rs  tests.rs  vkapi.rs
src/bot/: commands.rs
src/vkapi/: types.rs
