[package]
name = "p4nimau-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
rand = "0.8.5"
reqwest = "0.11.17"
serde = "1.0.164"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
vkclient = "4.0.3"
