[package]
name = "p4nimau-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures-util = "0.3.28"
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.167"
serde_json = "1.0.100"
tempdir = "0.3.7"
tokio = { version = "1.29.1", features = ["full"] }
vkclient = "4.0.4"
